# openapi/spec.yaml
@@ -53,8 +53,7 @@ paths:
         in: "path"
         description: "ID of User"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       responses:
         "204":
           description: "user not found"
@@ -181,6 +180,54 @@ paths:
           description: "Invalid user supplied"
         "500":
           description: "internal error"
+  /profile/authenticate:
+    post:
+      tags:
+      - "profile"
+      summary: "Autheticate a profile"
+      description: "used for authetication between internal systems"
+      operationId: "autheticateProfile"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "token to authenticate"
+        required: true
+        schema:
+          $ref: "#/definitions/AutheticateProfileRequest"
+      responses:
+        "200":
+          description: "Successful Operation"
+        "400":
+          description: "Invalid user supplied"
+        "500":
+          description: "internal error"
+  /profile/{id}:
+    post:
+      tags:
+      - "profile"
+      summary: "Autheticate a profile"
+      description: "used for authetication between internal systems"
+      operationId: "getProfile"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of Profile"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "Successful Operation"
+        "204":
+          description: "profile not found"
+        "500":
+          description: "internal error"
 securityDefinitions:
   api_auth:
     type: "oauth2"
@@ -198,8 +245,7 @@ definitions:
     type: "object"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
   UserPasswordRequest:
     type: "object"
     properties:
@@ -232,6 +278,11 @@ definitions:
       email:
         type: "string"
       code:
+        type: "string"
+  AutheticateProfileRequest:
+    type: "object"
+    properties:
+      token:
         type: "string"
   ApiResponse:
     type: "object"
